tests/cl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cl-pod
  labels:
    app: myapp
  namespace: test-monitoring
spec:
  containers:
  - name: myapp-container
    image: busybox
    command: ['sh', '-c', 'echo Hello Kubernetes! && sleep 3600 err']
