tests/deploy-unhealthy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bad-deploy
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels: { app: bad-deploy }
  template:
    metadata:
      labels: { app: bad-deploy }
    spec:
      containers:
      - name: c
        image: busybox:this-tag-does-not-exist
        command: ["sh","-c","sleep 3600"]
