tests/main-test-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  annotations:
    meta.helm.sh/release-name: istio-system-istio
    meta.helm.sh/release-namespace: istio-system
  creationTimestamp: "2020-12-08T01:19:38Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
  name: main
  namespace: istio-system
  resourceVersion: "1661"
  selfLink: /apis/networking.istio.io/v1beta1/namespaces/istio-system/gateways/main
  uid: 9cfaa8c6-744a-49b3-abc0-b3960153c9b2
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - '*.bigbang.dev'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: wildcard-cert
      mode: SIMPLE
