tests/nr-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: task-pv-pod
  namespace: test-monitoring
spec:
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: test-pv-claim
  containers:
    - name: task-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: task-pv-storage
