tests/pod-cfgerr-envfrom.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cfgerr-test
  namespace: monitoring
spec:
  restartPolicy: Never
  containers:
  - name: c
    image: busybox
    command: ["sh","-c","sleep 3600"]
    envFrom:
    - configMapRef:
        name: does-not-exist
