tests/pod-cfgerr-secretref.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cfgerr-secretref
  namespace: monitoring
spec:
  restartPolicy: Never
  containers:
  - name: c
    image: busybox
    command: ["sh","-c","sleep 3600"]
    env:
    - name: MUST_EXIST
      valueFrom:
        secretKeyRef:
          name: does-not-exist
          key: missing
